// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@processor: service checks * theme mapping meta empty 1`] = `
Array [
  Object {
    "appearance": "default",
    "name": "Test",
    "states": Array [
      "checked",
      "checked.disabled",
      "checked.active",
      "checked.disabled.active",
      "disabled",
      "disabled.active",
      "active",
    ],
    "variants": Array [
      "error",
      "info",
      "error.small",
      "error.big",
      "info.small",
      "info.big",
      "small",
      "big",
    ],
  },
  Object {
    "appearance": "custom",
    "name": "Test",
    "states": Array [
      "checked",
      "checked.disabled",
      "checked.active",
      "checked.disabled.active",
      "disabled",
      "disabled.active",
      "active",
    ],
    "variants": Array [
      "error",
      "info",
      "error.small",
      "error.big",
      "info.small",
      "info.big",
      "small",
      "big",
    ],
  },
  Object {
    "appearance": "superCustom",
    "name": "Test",
    "states": Array [
      "checked",
      "checked.disabled",
      "checked.active",
      "checked.disabled.active",
      "disabled",
      "disabled.active",
      "active",
    ],
    "variants": Array [
      "error",
      "info",
      "error.small",
      "error.big",
      "info.small",
      "info.big",
      "small",
      "big",
    ],
  },
]
`;

exports[`@processor: service checks * theme mapping meta expected 1`] = `
Array [
  Object {
    "appearance": "default",
    "name": "Radio",
    "states": Array [
      "checked",
      "checked.disabled",
      "checked.active",
      "checked.disabled.active",
      "disabled",
      "disabled.active",
      "active",
    ],
    "variants": Array [
      "error",
      "error.small",
      "error.big",
      "small",
      "big",
    ],
  },
  Object {
    "appearance": "custom",
    "name": "Radio",
    "states": Array [
      "checked",
      "checked.disabled",
      "checked.active",
      "checked.disabled.active",
      "disabled",
      "disabled.active",
      "active",
    ],
    "variants": Array [
      "error",
      "error.small",
      "error.big",
      "small",
      "big",
    ],
  },
]
`;
